fix spacing on user engagement page

--- a/src/components/projects/project.css
+++ b/src/components/projects/project.css
@@ -51,8 +51,8 @@ section.project .content {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding-left: 20vw;
-  padding-right: 20vw;
+  padding-left: 15vw;
+  padding-right: 15vw;
   padding-top: 2rem;
 }
 
